tests/fixtures/pass/raw_allocator_inferred.sali
let main(): i32 = {
  let pointer: MutPtr(Array(i32, 2)) = unsafe do {
    raw_alloc(size: 8, align: 64)
  }
  unsafe do {
    *pointer = [40, 2]
  }
  let values = unsafe do {
    *pointer
  }
  unsafe do {
    raw_dealloc(pointer: pointer, size: 8, align: 64)
  }
  values[0] + values[1]
}
