tests/fixtures/fail/raw_alloc_unconstrained.sali
let main(): i32 = {
  let pointer = unsafe do {
    raw_alloc(4, 4)
  }
  0
}
